# kiwi

./: ARCH.md  BRAND.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  audio_backup.rs  fix_build_prompt.py  fix_main.py  fix_main_tests.py  fix_orch.py  fix_super.py  fix_super2.py  fix_super3.py  patch_audio_5.py  patch_audio_6.py  patch_audio_7.py  patch_audio_clean.py  patch_audio_clean_dead_code.py  patch_audio_clean_dead_code_2.py  patch_audio_cleaner.py  patch_audio_fixed.py  patch_audio_lines.py  patch_audio_proper.py  patch_audio_remove_stt_ww.py  patch_audio_remove_stt_ww_2.py  patch_audio_stt_cleanup.py  patch_audio_stt_cleanup2.py  patch_audio_stt_cleanup3.py  patch_audio_trait.py  patch_audio_trait2.py  patch_audio_trait3.py  patch_audio_trait4.py  patch_audio_trait5.py  patch_channel_bound.py  patch_clippy.py  patch_clippy_fix.py  patch_config.py  patch_config_permissions.py  patch_gui.py  patch_gui_blocking.py  (+25 more)
.github/workflows/: build-and-test.yml  code-health.yml
core/: Cargo.toml
core/src/: audio.rs  config.rs  event.rs  gui.rs  intent.rs  lib.rs  llm.rs  memory.rs  plugin.rs  web.rs
src/: audio.rs  config.rs  config.rs.orig  daemon.rs  event.rs  executor.rs  gui.rs  intent.rs  interruption.rs  lib.rs  llm.rs  main.rs  memory.rs  monitor.rs  onboarding.rs  permissions.rs  plugin.rs  wakeword.rs  web.rs
src/agents/: explorer.rs  mod.rs  orchestrator.rs  speaker.rs  supervisor.rs  thinker.rs
tests/: intent_tests.rs  memory_tests.rs  permissions_test.rs  plugin_tests.rs  web_tests.rs
