[package]
name = "kiwi"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dirs = "6.0.0"
eframe = "0.34.2"
egui = "0.34.2"
glob = "0.3.3"
image = "0.24"
reqwest = "0.13.4"
rhai = "1.25.0"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.27.0"
