[package]
name = "kiwi"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
cpal = "0.15"
dirs = "6.0.0"
eframe = "0.34.2"
egui = "0.34.2"
futures-util = "0.3.32"
glob = "0.3.3"
image = "0.24"
kokoro-en = "0.1.4"
ndarray = "0.17.2"
reqwest = { version = "0.13.4", features = ["stream", "json"] }
rhai = "1.25.0"
scraper = "0.27.0"
ringbuf = "0.4"
rodio = "0.20"
rustfft = "6.2.0"
brotli = "8.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
urlencoding = "2.1.3"
whisper-rs = "0.16"
rubato = "3.0.0"
llama-cpp-2 = "0.1.150"
lazy_static = "1.5.0"
encoding_rs = "0.8.35"

[dev-dependencies]
tempfile = "3.27.0"
